# mongo_command_transfer

./: .gitignore  CMakeLists.txt  README.md  build.sh  todo
antlr4cpp/: CMakeLists.txt
main/: main.cpp
parser/: error_verbose_listener.hpp  get_operate_info_from_ast.cpp  get_operate_info_from_ast.h  get_operate_info_visitor.cpp  get_operate_info_visitor.h  iparser.h  mongo_function_def.hpp  mongodb_parser.cpp  mongodb_parser.h
parser/ast/: array_value.cpp  array_value.h  float_value.cpp  float_value.h  function_def.cpp  function_def.h  integer_value.cpp  integer_value.h  list_value.cpp  list_value.h  map_value.cpp  map_value.h  strings_value.cpp  strings_value.h  value.hpp
parser/interpreter/: interpreter.cpp  interpreter.h
parser/interpreter/command/: command.cpp  command.h  factory_cmd.cpp  factory_cmd.h
parser/interpreter/command/collection/: coll_stats.cpp  coll_stats.h  collection_cmd.cpp  collection_cmd.h  delete.cpp  delete.h  find.cpp  find.h  list_indexes.cpp  list_indexes.h  plan_cache.cpp  plan_cache.h  update.cpp  update.h
parser/interpreter/command/database/: buildinfo.cpp  buildinfo.h  create.cpp  create.h  create_user_or_role.cpp  create_user_or_role.h  database_cmd.cpp  database_cmd.h  drop_all.cpp  drop_all.h  fsync.cpp  fsync.h  list_collections.cpp  list_collections.h  profile.cpp  profile.h  roles_info.cpp  roles_info.h  set_free_monitoring.cpp  set_free_monitoring.h  shutdown.cpp  shutdown.h  update_user_or_role.cpp  update_user_or_role.h  users_info.cpp  users_info.h
parser/interpreter/command/replication/: repl_reconfig.cpp  repl_reconfig.h  repl_stepdown.cpp  repl_stepdown.h  replication_cmd.cpp  replication_cmd.h
parser/interpreter/command/session/: session_cmd.cpp  session_cmd.h
parser/interpreter/command/sharding/: balancer_start_stop.cpp  balancer_start_stop.h  sharding_cmd.cpp  sharding_cmd.h
parser/utils/: string_utils.hpp
syntax/g4mongodbcmd/: MongodbCmdLexer.g4  MongodbCmdParser.g4  generate.sh
test/: abortTransaction.txt  addShard.txt  addShardToZone.txt  aggregate.txt  balancerCollectionStatus.txt  balancerStart.txt  balancerStatus.txt  balancerStop.txt  buildInfo.txt  collMod.txt  collStats.txt  count.txt  create.txt  createIndexes.txt  createUser.txt  currentOp.txt  delete.txt  delete_many.txt  distinct.txt  dropAllRolesFromDatabase.txt  dropAllUsersFromDatabase.txt  dropDatabase.txt  dropRole.txt  enableSharding.txt  explain.txt  find.txt  findAndModify.txt  fsync.txt  fsyncUnlock.txt  geoSearch.txt  getFreeMonitoringStatus.txt  grantPrivilegesToRole.txt  grantRolesToUser.txt  hostInfo.txt  insert.txt  isMaster.txt  killAllSession.txt  killAllSessionsByPattern.txt  killOp.txt  listCollections.txt  (+35 more)
